# opendescent

./: .gitignore  README.md  bsd_local_magma_batch_export.py  bsd_local_magma_p3_remaining.m  bsd_local_magma_p5_probe.m  bsd_local_magma_readme.md  certificate.json  certificate.native.json  certificate.sage.json  codex2_higher2_certificate.json  codex2_higher2_completion.py  codex2_higher2_summary.md  codex2_higher2_unresolved.json  codex2_no_magma_completion.py  codex2_no_magma_completion_summary.md  codex2_no_magma_primary_evidence.json  codex2_no_magma_unresolved.json  pyproject.toml
docs/: certificate-format.md  comparison.md  native-roadmap.md
examples/: calibration_curves.json  codex2_timeout_cases.json
examples/expected/: codex2_timeout_grh_evidence.json  codex2_timeout_mwrank.json  codex2_timeout_sage.json  mwrank_calibration.json  native_calibration.json  sage_calibration.json
examples/transcripts/: magma_2429b1_three_selmer_grh.txt  magma_2534f1_three_selmer_grh.txt  magma_2674b1_three_selmer_grh.txt
opendescent/: __init__.py  backends.py  calculator.py  cassels.py  certificate.py  cli.py  codex2_higher2.py  codex2_no_magma.py  coverings.py  curve.py  f5.py  finite_field.py  five_descent.py  higher_descent.py  local.py  local_solubility.py  magma_batch_export.py  mwrank_backend.py  sage_backend.py  sage_primary.py  selmer.py  tate.py  transcripts.py
tests/: test_curve.py
