[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opendescent"
version = "0.1.0"
description = "Open BSD/descent certificate engine scaffold"
requires-python = ">=3.10"
authors = [{ name = "Marvin B Freedman" }]
license = { text = "MIT" }

[project.scripts]
opendescent = "opendescent.cli:main"

